# EnergySpinCurrents

./: 2SSLocal_outSpectrum.real  CMakeLists.txt  JeJe_outSpectrum.real  JsJs_outSpectrum.real  Midinput.inp  README.md  main.cpp
src/: DynLanczosSolver.h  Exactdiag.h  Hamiltonian.h  Lattice.h  Matrix.h  Memusage.h  Observables.h  ParametersEngine.h  QuantumBasis.h  dynamics.h
